--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@csstools/normalize.css": "^11.0.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
-    "normalize-scss": "^7.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
