--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@csstools/normalize.css": "^11.0.1",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "echarts": "^4.9.0",
     "element-ui": "^2.14.1",
     "js-md5": "^0.7.3",
     "qs": "^6.5.2",
     "vue": "^2.6.11",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
